<resources>

    <!--APP-NAME-->
    <string name="app_name">ExecuteX</string>

    <!--MAIN ACTIVITY STRINGS-->
    <string name="homePage_hint_for_email">Email</string>1
    <string name="homePage_hint_for_password">Password</string>
    <string name="homePage_welcome_message">Welcome to ExecuteX</string>
    <string name="homePage_signInBtn">Sign in</string>
    <string name="homePage_forgotPassword">Forgot password?</string>
    <string name="homePage_OR">or</string>
    <string name="homePage_messageForCreateAcc">New to ExecuteX?</string>
    <string name="homePage_createAcc"><u>Create Account</u></string>

    <!--SIGNUP ACTIVITY STRINGS-->
    <string name="signUp_createAcc">Create Account</string>
    <string name="signUp_heading">Welcome !</string>
    <string name="signUp_welcome_message">We\'re happy to have you</string>
    <string name="signUp_OR">Create New Account</string>
    <string name="signUp_goBack"><u>Go back to login</u></string>


    <!--FORGOT PASSWORD ACTIVITY STRINGS-->
    <string name="forgotPass_heading">Reset Password</string>
    <string name="forgotPass_message">Please enter your email to reset \nthe password</string>
    <string name="forgotPass_recover">Recover</string>
    <string name="forgotPass_goBack"><u>Go back to login</u></string>

    <!--NOTES ACTIVITY STRINGS-->
    <string name="add_new_task">Add a new task</string>
    <string name="logout_menu_option">Logout</string>
    <string name="task_options">Options for a particular task</string>
    <string name="task_title_home">Buy the listed groceries.</string>
    <string name="task_detail_home">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book</string>
    <string name="task_title">Task\'s title goes in here</string>
    <string name="task_description">Task\'s description goes in here</string>

    <!--TASK READ ONLY ACTIVITY STRINGS-->
    <string name="task_title_readOnly">Task\'s title</string>
    <string name="task_description_readOnly">Task\'s description</string>

    <!--CREATE TASK ONLY ACTIVITY STRINGS-->
    <string name="task_title_create_task">Task\'s title goes in here</string>
    <string name="task_description_create_task">Task\'s description goes in here</string>
    <string name="task_speech_input_title_create_task">Task\'s title Mic ImageBtn</string>
    <string name="task_speech_input_description_create_task">Task\'s description Mic ImageBtn</string>

    <!--EDIT TASK ACTIVITY STRINGS-->
    <string name="task_title_edit_task">Title of the task</string>
    <string name="task_description_edit_task">Description of the task</string>
    <string name="task_speech_input_title_edit_task">Task\'s title Mic ImageBtn</string>
    <string name="task_speech_input_description_edit_task">Task\'s description Mic ImageBtn</string>

</resources>
