<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".ForgotPasswordActivity">

    <!--Set reference line at center mid as a relative layout to achieve responsive layout.-->
    <RelativeLayout
        android:id="@+id/referenceLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <!--Heading-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/referenceLine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="260dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/forgotPass_heading"
            android:textAlignment="textStart"
            android:textColor="@color/headingTextColor"
            android:textSize="42sp" />

    </LinearLayout>
    <!--Welcome message-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/referenceLine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/lato"
            android:text="@string/forgotPass_message"
            android:textColor="@color/messageTextColor"
            android:textSize="22sp" />

    </LinearLayout>
    <!--Create Account Button-->
    <Button
        android:id="@+id/createAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/referenceLine"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/lato"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/forgotPass_recover"
        android:textAllCaps="false"
        android:textColor="@color/btnTextColor"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />
    <!--Go back to home activity-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/referenceLine"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/goBackToLogin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/forgotPass_goBack"
            android:textColor="@color/forgotPassNewUserGoBackColor"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>