<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    tools:context=".SignUpActivity">

    <!--Set reference line at center mid as a relative layout to achieve responsive layout.-->
    <RelativeLayout
        android:id="@+id/referenceLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
    <!--Heading-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/referenceLine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="260dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/source_sans_pro_semibold"
            android:text="@string/signUp_heading"
            android:textAlignment="textStart"
            android:textColor="@color/headingTextColor"
            android:textSize="46sp" />

    </LinearLayout>
    <!--Welcome message-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/referenceLine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="220dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/lato"
            android:text="@string/signUp_welcome_message"
            android:textColor="@color/messageTextColor"
            android:textSize="22sp" />

    </LinearLayout>
    <!--Fancy Divider -->
    <LinearLayout
        android:id="@+id/OrDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/referenceLine"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="120dp"
        android:orientation="horizontal">

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/fancyDividerInputTextColor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/signUp_OR"
            android:textColor="@color/fancyDividerInputTextColor"
            android:textSize="16sp" />

        <View
            android:layout_width="60dp"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/fancyDividerInputTextColor" />
    </LinearLayout>
    <!--Email-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/referenceLine"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@color/loginHintColor"
        app:boxBackgroundColor="@color/loginHintBgColor"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxStrokeColor="@color/boxStrokeColor"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/boxStrokeColor">

        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="exampleEmail@email.com"
            android:fontFamily="@font/roboto"
            android:hint="@string/homePage_hint_for_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/fancyDividerInputTextColor"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Password-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/referenceLine"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:textColorHint="@color/loginHintColor"
        app:boxBackgroundColor="@color/loginHintBgColor"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxStrokeColor="@color/boxStrokeColor"
        app:boxStrokeWidth="0dp"
        app:hintTextColor="@color/boxStrokeColor"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="exampleEmail@email.com"
            android:fontFamily="@font/roboto"
            android:hint="@string/homePage_hint_for_password"
            android:inputType="textPassword"
            android:textColor="@color/fancyDividerInputTextColor"
            android:textSize="18sp"
            tools:ignore="SpeakableTextPresentCheck" />

    </com.google.android.material.textfield.TextInputLayout>
    <!--Create Account Button-->
    <Button
        android:id="@+id/createAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/referenceLine"
        android:layout_centerInParent="true"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/btnColor"
        android:fontFamily="@font/lato"
        android:paddingStart="40dp"
        android:paddingTop="10dp"
        android:paddingEnd="40dp"
        android:paddingBottom="10dp"
        android:text="@string/signUp_createAcc"
        android:textAllCaps="false"
        android:textColor="@color/btnTextColor"
        android:textSize="18sp"
        tools:ignore="TextContrastCheck" />
    <!--Go back to home activity-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/OrDivider"
        android:layout_marginStart="50dp"
        android:layout_marginTop="220dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/goBackToLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/signUp_goBack"
            android:textColor="@color/forgotPassNewUserGoBackColor"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>