<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/taskHomeBg"
    android:padding="8dp">

    <!--CardView for task layout that will duplicate tasks using adapter-->
    <androidx.cardview.widget.CardView
        android:id="@+id/taskCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        app:cardMaxElevation="8dp">

        <LinearLayout
            android:id="@+id/task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/taskLayoutBg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/taskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto"
                    android:paddingStart="12dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="12dp"
                    android:paddingBottom="8dp"
                    android:text="@string/task_title_home"
                    android:textColor="@color/taskText"
                    android:textSize="18sp" />


                <ImageView
                    android:id="@+id/taskOpt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:contentDescription="@string/task_options"
                    android:src="@drawable/ic_baseline_more_vert_24"
                    app:tint="@color/taskText" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#23262F" />

            <TextView
                android:id="@+id/taskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingStart="14dp"
                android:paddingTop="6dp"
                android:paddingEnd="14dp"
                android:paddingBottom="6dp"
                android:text="@string/task_detail_home"
                android:textColor="@color/taskText"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>